# MovieBot

./: .travis.yml  README.md  pyproject.toml  qa.json
HU/: HU0.md  HU1.md  HU2.md  HU3.md  HU4.md  HU5.md
src/: pyproject.toml
src/database/: bd.py  bdinitializer.py  queries.py
src/moviedb/: moviedbapi.py
src/telegrambot/: moviebot.py
tests/: test_database.py  test_moviedb.py
